--- a/enjoytrip/src/main/resources/application.properties
+++ b/enjoytrip/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mybatis setting
 #mybatis.type-aliases-package=com.mvc.vo
-#mybatis.mapper-locations=classpath:/mapper/CustomerMapper.xml
+#mybatis.mapper-locations=classpath:/mapper/MemberMemberMapper.xml
 
 #server restart
 spring.devtools.restart.additional-paths=.
