--- a/enjoytrip/src/main/resources/application.properties
+++ b/enjoytrip/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8080
 
 # db setting
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/scottdb
-spring.datasource.username=scott
-spring.datasource.password=tiger
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/enjoytrip
+spring.datasource.username=ssafy
+spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# mybatis setting
-#mybatis.type-aliases-package=com.mvc.vo
-#mybatis.mapper-locations=classpath:/mapper/MemberMemberMapper.xml
+#mybatis setting
+mybatis.type-aliases-package=com.ssafy.vo
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
 #server restart
 spring.devtools.restart.additional-paths=.
