--- a/enjoytrip/src/main/resources/application.properties
+++ b/enjoytrip/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8080
 
 # db setting
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/enjoytrip
-spring.datasource.username=scott
-spring.datasource.password=tiger
+spring.datasource.username=ssafy
+spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #mybatis setting
