--- a/enjoytrip/.gitignore
+++ b/enjoytrip/.gitignore
@@ -22,10 +22,11 @@ bin/
 *.iws
 *.iml
 *.ipr
+*.properties
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-!**/src/main/resources/application.properties
+
 
 ### NetBeans ###
 /nbproject/private/
