--- a/enjoytrip/build.gradle
+++ b/enjoytrip/build.gradle
@@ -26,6 +26,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.jsoup:jsoup:1.16.1'
+	compileOnly('org.springframework.boot:spring-boot-starter-web')
+	compileOnly('io.jsonwebtoken:jjwt-api:0.11.1')
+	runtimeOnly('io.jsonwebtoken:jjwt-impl:0.11.1', 'io.jsonwebtoken:jjwt-jackson:0.11.1')
+
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 tasks.named('test') {
